# openlimno

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SPEC-v0.1-archive.md  SPEC.md  mkdocs.yml  pixi.toml  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.yml  feature.yml
.github/workflows/: benchmark-weekly.yml  ci.yml  schism-container.yml  triple-review.yml
benchmarks/mms/: test_mms_1d.py
benchmarks/phabsim_bovee1997/: README.md  test_bovee_1997.py
benchmarks/toro/: test_toro_riemann.py
containers/schism/: Dockerfile  build.sh
data/lemhi/: Q_2024.csv  README.md  cross_section.parquet  drifting_egg_params.parquet  hsi_curve.parquet  hsi_evidence.parquet  life_stage.parquet  manifest.json  mesh.ugrid.nc  passage_criteria.parquet  rating_curve.parquet  redd_count.parquet  species.parquet  survey_campaign.parquet  swimming_performance.parquet
docs/: RELEASE_v0.4.0.md  RELEASE_v1.0.0.md  STATE_2026_05.md  fetch_system.md  index.md  triple_review.md
docs/api/: habitat.md  hydro.md  passage.md  preprocess.md  wedm.md
docs/decisions/: 0001-data-formats-open-only.md  0002-schism-integration-strategy.md  0003-1d-engine-build-vs-buy.md  0004-no-bmi-in-1.0.md  0005-qgis-deployment-strategy.md  0006-hsi-rigor-hard-constraints.md  0007-attraction-passage-decomposition.md  0008-multi-scale-habitat-aggregation.md  0009-regulatory-output-templates.md  0010-spec-scope-discipline.md  _template.md  index.md
docs/getting_started/: concepts.md  install.md  quickstart.md
docs/governance/: CAPABILITY_BOUNDARY_1_0.md  GOVERNANCE.md  MAINTAINERS.md  SPEC_CHANGE_PROPOSAL.md
docs/governance/announcements/: call-for-maintainers.md
docs/governance/funding/: 00-shared-narrative.md  horizon-europe-application-outline.md  nsf-application-outline.md  nsfc-application-outline.md
docs/governance/meetings/: 2026-Q2-M0-review-template.md
docs/reviews/v0.1.0-alpha.10/: README.md  claude.md  codex.md  gemini.md
docs/reviews/v0.1.0-alpha.13/: README.md  round1-claude.md  round1-codex.md  round1-gemini.md  round2-claude.md  round2-codex.md  round2-gemini.md  round3-claude.md  round3-codex.md  round3-gemini.md  round4-claude.md  round4-codex.md  round4-gemini.md
docs/reviews/v0.1.0-alpha.4/: README.md  claude.md  codex.md  gemini.md
docs/user_guide/: habitat.md  hydro.md  index.md  passage.md  preprocess.md  qgis.md  regulatory_export.md  studyplan.md
examples/anywhere_bbox/: README.md
examples/lemhi/: README.md  case.yaml  quickstart.py  studyplan.yaml
examples/phabsim_replication/: README.md  build_data.py  case.yaml  quickstart.py
examples/phabsim_replication/data/: cross_section.parquet  expected_wua.json  hsi_curve.parquet  life_stage.parquet  species.parquet
packaging/: PHASE5_DEFERRED.md  build_appimage.sh  openlimno-studio.spec  runtime_hook.py
scripts/: triple_review.sh
scripts/lib/: safe_env.sh
src/openlimno/: __init__.py  __main__.py  case.py  cli.py
src/openlimno/gui_core/: __init__.py  controller.py
src/openlimno/habitat/: __init__.py  cover.py  drifting_egg.py  hmu.py  hsi.py  thermal.py  wua.py
src/openlimno/habitat/regulatory_export/: __init__.py  cn_sl712.py  eu_wfd.py  us_ferc_4e.py
src/openlimno/hydro/: __init__.py  builtin_1d.py  schism.py
src/openlimno/passage/: __init__.py  culvert.py  passage.py
src/openlimno/preprocess/: __init__.py  adcp.py  biological.py  cross_section.py  dem.py  legacy.py  mesh.py  osm_builder.py
src/openlimno/preprocess/fetch/: __init__.py  cache.py  cn_hydro.py  daymet.py  dem.py  fishbase.py  hydrosheds.py  nwis.py  openmeteo.py  sidecar.py  soilgrids.py  species.py  watershed_climate.py  worldcover.py
src/openlimno/preprocess/fetch/data/: fishbase_traits_starter.csv
src/openlimno/qgis/: __init__.py
src/openlimno/qgis/openlimno_qgis_plugin/: README.md  __init__.py  metadata.txt  plugin.py
src/openlimno/studio/: __init__.py  __main__.py  main_window.py
src/openlimno/studyplan/: __init__.py  studyplan.py
src/openlimno/wedm/: __init__.py  validate_schemas.py
src/openlimno/wedm/schemas/: biological_observations.schema.json  builtin_1d_config.schema.json  case.schema.json  drifting_egg_params.schema.json  hsi_curve.schema.json  life_stage.schema.json  migration_corridor.schema.json  passage_config.schema.json  physical_observations.schema.json  schism_config.schema.json  species.schema.json  studyplan.schema.json
src/openlimno/workflows/: __init__.py  calibrate.py
src/openlimno/workflows/snakefiles/: calibrate.smk
tests/integration/: studio_workflows_smoke.py  test_appimage_run_smoke.py  test_case_schism_dry_run.py  test_cli_subprocess.py  test_drift_egg_case.py  test_lemhi_dataset.py  test_lemhi_end_to_end.py  test_phabsim_replication_example.py  test_qgis_plugin_shim.py  test_snakemake_calibrate.py
tests/integration/fixtures/lemhi-tiny/: README.md  case.yaml
tests/integration/fixtures/lemhi-tiny/data/: cross_section.parquet  hsi_curve.parquet  mesh.ugrid.nc
tests/unit/: test_biological.py  test_builtin_1d.py  test_calibrate.py  test_cli.py  test_cover_habitat.py  test_drifting_egg.py  test_habitat.py  test_hmu.py  test_legacy_importers.py  test_mesh_validation.py  test_passage.py  test_preprocess.py  test_preprocess_fetch.py  test_qgis_plugin_smoke.py  test_regulatory_export.py  test_regulatory_export_us_eu.py  test_safe_env_contract.py  test_schism_adapter.py  test_schism_input_generation.py  test_standard_step.py  test_studyplan.py  test_thermal_habitat.py  test_wedm_schemas.py  test_wua_watermark.py  test_xs_rows_cache.py
tools/: build_lemhi_dataset.py  fetch_all_smoke.py
tools/m0_checklist/: M0_CHECKLIST.md  spec_scope_check.py
tools/release/: RELEASE.md
