[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "openlimno"
version = "0.3.1-rc1"
description = "Open-source water ecology modeling platform — PHABSIM/IFIM modernization with SCHISM 2D wrapping"
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = { file = "LICENSE" }
authors = [
    { name = "OpenLimno Contributors", email = "hello@openlimno.org" },
]
keywords = [
    "ecology", "hydrology", "fish-habitat", "PHABSIM", "IFIM",
    "ecological-flow", "WUA", "HSI", "river2d", "SCHISM",
]
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Hydrology",
    "Topic :: Scientific/Engineering :: GIS",
]
dependencies = [
    "numpy>=1.26",
    "pandas>=2.2",
    "xarray>=2024.1",
    "netCDF4>=1.6",
    "pyarrow>=15",
    "pyproj>=3.6",
    "shapely>=2.0",
    "geopandas>=0.14",
    "rasterio>=1.3",
    "matplotlib>=3.8",
    "pyyaml>=6",
    "jsonschema>=4.21",
    "click>=8.1",
    "rich>=13",
    "scipy>=1.12",
    "requests>=2.31",  # openlimno.preprocess.osm_builder Overpass calls
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "pytest-regressions>=2",
    "hypothesis>=6",
    "ruff>=0.4",
    "mypy>=1.10",
]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.25",
]
schism = [
    "pyschism",
]

[project.urls]
Homepage = "https://openlimno.org"
Documentation = "https://docs.openlimno.org"
Repository = "https://github.com/openlimno/openlimno"
Issues = "https://github.com/openlimno/openlimno/issues"
Changelog = "https://github.com/openlimno/openlimno/blob/main/CHANGELOG.md"

[project.scripts]
openlimno = "openlimno.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/openlimno"]

[tool.hatch.build.targets.wheel.shared-data]
"src/openlimno/wedm/schemas" = "openlimno/wedm/schemas"

# ---------------------------------------------------------------
# ruff
# ---------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E", "F", "W",          # pycodestyle / pyflakes
    "I",                      # isort
    "N",                      # naming
    "UP",                     # pyupgrade
    "B",                      # bugbear
    "SIM",                    # simplify
    "RUF",                    # ruff-specific
    "PT",                     # pytest style
]
ignore = [
    "E501",   # line too long (formatter handles)
    "N802",   # function name lowercase (math operators: Q_at_h, T_of_x, ...)
    "N803",   # argument lowercase (Q, A, U_burst — physics symbols)
    "N806",   # var name in func (same)
    "N815",   # mixed-case class attribute (hatch_temp_C_mean: °C convention)
    "N816",   # mixed-case module-level (LTS_VERSION ok)
    "RUF001", # ambiguous unicode (× / – are unambiguous in scientific text)
    "RUF002", # same in docstrings
    "RUF003", # same in comments
    "RUF043", # match= regex without raw-string (test plumbing, not security)
    "RUF046", # cast(int, x) where x is already int (clarity > redundancy)
    "RUF100", # unused noqa (downstream ruff version drift)
    "SIM105", # contextlib.suppress vs try/except pass (taste)
    "SIM108", # ternary preference (taste)
    "SIM117", # combined with-statements (taste)
    "PT018",  # multi-part assert (clarity > brevity in tests)
]

[tool.ruff.lint.per-file-ignores]
# B023: closure-over-loop-var inside numerical iteration is intentional
# (the closure is consumed within the same iteration via brentq/minimize)
"src/openlimno/hydro/builtin_1d.py" = ["B023"]
"src/openlimno/preprocess/legacy.py" = ["F841"]  # cur_npts kept for parser symmetry
"tests/**" = ["N806", "B011", "B023", "F841", "RUF059"]
"benchmarks/**" = ["N806", "B011", "F841", "RUF059"]
"examples/**" = ["N806"]

[tool.ruff.format]
quote-style = "double"

# ---------------------------------------------------------------
# mypy
# ---------------------------------------------------------------
[tool.mypy]
python_version = "3.11"
# Pragmatic stance for a 1.0-rc science codebase: catch real type bugs without
# fighting numpy/pandas dynamic typing. Strict mode is the goal post-1.0 once
# upstream stubs (yaml, geopandas, rasterio) stabilise.
strict = false
ignore_missing_imports = true
warn_return_any = false
warn_unused_configs = true
warn_unused_ignores = false
disable_error_code = [
    "import-untyped",  # yaml/geopandas/rasterio still ship without stubs
    "no-any-return",   # numpy/pandas return Any pervasively
    "type-arg",        # `dict` without parameters is fine for this code
    "assignment",      # union assignments in regulatory_export switch
    "misc",            # numpy callable? edge cases
    "unused-ignore",   # tolerated drift across mypy versions
    "attr-defined",    # studyplan dynamic dict-as-object access (works at runtime)
    "arg-type",        # numpy/pandas list[str] vs list[Literal] friction
    "call-arg",        # jsonschema-referencing API surface drift
]
plugins = []

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

# ---------------------------------------------------------------
# pytest
# ---------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests", "benchmarks"]
addopts = "-ra --strict-markers"
markers = [
    "slow: tests that take >5s",
    "schism: requires external SCHISM binary",
    "qgis: requires QGIS environment",
    "benchmark: validation benchmark, not unit test",
]

[tool.coverage.run]
source = ["src/openlimno"]
omit = ["src/openlimno/qgis/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
